# sino_code_t_myself

./: CMakeLists.txt  README.md
CSerialPort-master/.github/ISSUE_TEMPLATE/: bug_report.md
CSerialPort-master/Demo/CommNoGui/: CSerialPortDemoNoGui.cpp
CSerialPort-master/Demo/CommNoGui/build_armv7/: CMakeCache.txt  CSerialPortDemoNoGui  Makefile  cmake_install.cmake
CSerialPort-master/Demo/CommNoGui/build_x86/: CMakeCache.txt  CSerialPortDemoNoGui  Makefile  cmake_install.cmake
CSerialPort-master/lib/: CMakeLists.txt
OEMRtk-N/: CMakeLists.txt  Common.h  PolarisInterface.h  QRTKInterface.h  QRtkImpl.cpp  QRtkImpl.h  QRtkParameter.h  RawFormat.cpp  RawFormat.h  RtcmDecode.cpp  RtcmDecode.h  RtkType.h  libRtkAPI.cpp  libRtkAPI.h
Output/lib/EC100Y/: libPreRtk-N-gcc-non.lib  libntripclient-gcc-non.lib  libutil-N-gcc-non.lib
Toolchains/: arm-none-eabi-9.2.cmake  armv7ahf-neon-oe-linux-gnueabi.cmake  armv7at2hf-neon-oe-linux-gnueabi.cmake
build-9628/: CMakeCache.txt  Makefile  cmake_install.cmake
build-9628/CSerialPort-master/lib/: Makefile
build-9628/OEMRtk-N/: Makefile
build-9628/ntripclient/: Makefile
build-9628/qcom_9628/PrecisePosEngineLib/: Makefile  cmake_install.cmake
build-9628/util-N/: Makefile  cmake_install.cmake
build-N/: CMakeCache.txt  Makefile  cmake_install.cmake
build-N/CSerialPort-master/lib/: Makefile
build-N/OEMRtk-N/: Makefile
build-N/ntripclient/: Makefile
build-N/qcom_9628/PrecisePosEngineLib/: Makefile
build-N/qcom_sa415m/PrecisePosEngineLib/: Makefile  cmake_install.cmake
build-N/util-N/: Makefile
build-ec100y/: CMakeCache.txt  Makefile  cmake_install.cmake
build-ec100y/OEMRtk-N/: Makefile  cmake_install.cmake
build-ec100y/ntripclient2/: Makefile  cmake_install.cmake
build-ec100y/util-N/: Makefile
build-sa415m/: CMakeCache.txt  Makefile  cmake_install.cmake
build-sa415m/CSerialPort-master/lib/: Makefile  cmake_install.cmake
build-sa415m/OEMRtk-N/: Makefile
build-sa415m/ntripclient/: Makefile  cmake_install.cmake
build-sa415m/qcom_sa415m/PrecisePosEngineLib/: Makefile
build-sa415m/qcom_sa415m/PrecisePosEngineLibTest/: Makefile  cmake_install.cmake  ppe_test
build-sa415m/util-N/: Makefile
lib/EC100Y/: liboemRtk-gcc-non.lib
ntripclient/: CMakeLists.txt  libapi.c  libsockets.cpp  libsockets.h  ntrip_client.cpp  ntrip_client.h  ntrip_util.cpp  ntrip_util.h
ntripclient2/: CMakeLists.txt  libapi.c  libapi.h  libsockets.c  libsockets.h
ntripclient2/lib/didi/: libntripclient-gcc-non.lib
qcom_9628/EnginePluginAPI/: EnginePluginAPI.h  EnginePluginLog.h
qcom_9628/PrecisePosEngineLib/: CMakeLists.txt  PrecisePosEngine.cpp  ppecom.cpp  ppecom.h
qcom_sa415m/EnginePluginAPI/: EnginePluginAPI.h  EnginePluginLog.h
qcom_sa415m/PrecisePosEngineLib/: CMakeLists.txt  PPELibAPI.h  PrecisePosEngine.cpp  ppecom.cpp
qcom_sa415m/PrecisePosEngineLibTest/: CMakeLists.txt  main.cpp
util-N/: CMakeLists.txt  RingBuffer.c  RingBuffer.h  ini.h  logger.cpp  logger.h  serialport.h  sino.conf
util-N/bak/: RingBuffer.cpp  logger.cpp  serialport.cpp
